force-app/main/default/objects/Parcel__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Address</label>
    <referenceTo>Address</referenceTo>
    <relationshipLabel>Parcels</relationshipLabel>
    <relationshipName>Parcels_Address</relationshipName>
    <type>Lookup</type>
</CustomField>