force-app/main/default/objects/Parcel__c/fields/Parcel_ID__c.field-meta.xml
<CustomField>
    <fullName>Parcel_ID__c</fullName>
    <label>Parcel ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>