force-app/main/default/objects/Parcel__c/fields/Parcel_Main_Contact__c.field-meta.xml
<CustomField>
    <fullName>Parcel_Main_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parcel Main Contact</description>
    <inlineHelpText>Parcel Main Contact</inlineHelpText>
    <label>Parcel Main Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Parcels (Parcel Main Contact)</relationshipLabel>
    <relationshipName>Parcel_Main_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>