force-app/main/default/objects/Parcel__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Parcel_Main_Contact__c</columns>
    <columns>Parcel_Owner__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>